<?xml version="1.0"?>
<package format="2">
  <name>navigation</name>
  <version>1.0.0</version>
  <description>The navigation package</description>

  <author email="kimtj5521@gmail.com">tjk</author>
  <maintainer email="kimtj5521@gmail.com">tjk</maintainer>

  <license>MIT</license>

  <url>https://github.com/kimtj5521/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
